# ehs-mentor

./: .dockerignore  .env  .gitignore  BACKUP_INFO.md  DEPLOY.md  DEPLOYMENT_NOTES.md  Dockerfile  KampusApplication.tsx  QUICK_DEPLOY.md  README.md  README_DEPLOY.md  alembic.ini  app.py  cleanup_duplicates.sql  deploy.sh  docker-compose.yml  ehs.db  equipment_tag_map.csv  index.html  package-lock.json  package.json  pyproject.toml  render.yaml  run_local.sh  setup_cron.sh  setup_db.py  simple_proof.py  start.sh  test_api.py  test_urgency_proof.py  training_catalog.json  update_urgency.py
app/: db.py  main.py
app/ai/: bedrock_client.py  extractor.py  mappers.py  role_extractor.py
app/routers/: admin.py  ai_process.py  assignments.py  assignments.py.save  chat.py  cleanup.py  docs.py  documents.py  recommend.py  reports.py  stats.py  upload.py
data/: courses.csv  courses_trimmed.csv  rules.csv  user_courses.csv  users.csv  users_trimmed.csv
db_migrations/: env.py
db_migrations/versions/: 0001_base.py  0002_normalize_core.py  0003_docs.py  (+5 more)
frontend/: KampusApplication.tsx  KampusPage.tsx  admin.html  application-form.html  ehs_api.js  faculty.html  index.html  kampus-style.html  learner.html  lebedev-dashboard.html  lebedev-vibe.css  styles.css
modules/: bsc_usage_cdc_v1.yaml  forklift_preop_osha_v1.yaml  forklift_refuel_osha_v1.yaml  hazcom_sds_osha_v1.yaml  ppe_basics_osha_v1.yaml
policies/: bmbl_bsc_checklist.txt  hazcom_1910_1200_sds.txt  osha_1910_106_refueling.txt  osha_1910_178_preop.txt  ppe_1910_132_basics.txt
src/: App.tsx  index.css
(+14 files in other folders)
